[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/cover page.jpg" type="Texture" id=1]
[ext_resource path="res://Light.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://images/how to play.jpg" type="Texture" id=4]
[ext_resource path="res://Water-river.tscn" type="PackedScene" id=5]
[ext_resource path="res://river.gd" type="Script" id=6]
[ext_resource path="res://music/a starry sky 1.28.MP4.ogg" type="AudioStream" id=7]
[ext_resource path="res://images/title.png" type="Texture" id=8]
[ext_resource path="res://music/河流(急流、远处、微风、鸟)、家务(浴室).ogg" type="AudioStream" id=9]
[ext_resource path="res://music/游戏气泡.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.803922 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -33.3937, -107.891 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.74157, 3.92382 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "panel"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.803922 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20.4073, -45.496 ), Vector2( -33.3937, -107.891 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3.74157, 3.92382 ) ]
}

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 67.78
flag_disable_z = true
gravity = Vector3( 0, -90, 0 )
initial_velocity = 859.91
initial_velocity_random = 1.0
angular_velocity = -720.0
angular_velocity_random = 0.31
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 300.0
scale = 2.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0313726, 0.188235, 0.0901961, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.180392, 0.396078, 0.294118, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.792157, 1, 0.823529, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="Theme" id=4]
ProgressBar/styles/bg = SubResource( 5 )
ProgressBar/styles/fg = SubResource( 6 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.05842, 1.02172 )
script = ExtResource( 3 )

[node name="MainMenu" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -89.2842
margin_top = 70.4692
margin_right = 17.7158
margin_bottom = 186.469
rect_scale = Vector2( 1.69074, 2.19711 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
margin_left = 10.0
margin_right = 97.0
margin_bottom = 116.0

[node name="Play" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_right = 87.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.909804, 0.458824, 0, 1 )
custom_colors/font_color_pressed = Color( 0.792157, 0.360784, 0, 1 )
text = "Play"
flat = true

[node name="Quit" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 87.0
margin_bottom = 44.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.607843, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.866667, 0.65098, 0, 1 )
text = "Quit"
flat = true

[node name="FullScreen" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 87.0
margin_bottom = 68.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.847059, 0.458824, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0.376471, 0.909804, 1 )
text = "Full Screen"
flat = true

[node name="Setting" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 87.0
margin_bottom = 92.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.396078, 0.0196078, 0.0196078, 1 )
custom_colors/font_color_pressed = Color( 0.345098, 0.0156863, 0.0156863, 1 )
text = "How to Play"
flat = true
align = 2

[node name="How to Play" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 87.0
margin_bottom = 116.0
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenu/CenterContainer"]
root_node = NodePath("../VBoxContainer/Setting")
anims/RESET = SubResource( 2 )
anims/panel = SubResource( 3 )

[node name="Light2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 66, 502 )
scale = Vector2( 0.0191434, 0.0184399 )

[node name="Light2D2" parent="." instance=ExtResource( 2 )]
position = Vector2( 54.2516, 277.817 )
scale = Vector2( 0.371005, 0.342962 )
mode = 2

[node name="Light2D3" parent="." instance=ExtResource( 2 )]
position = Vector2( 705, 549 )
scale = Vector2( 0.270271, 0.242637 )

[node name="Light2D4" parent="." instance=ExtResource( 2 )]
position = Vector2( 948, 475 )
scale = Vector2( 0.0709778, 0.0678815 )

[node name="Light2D5" parent="." instance=ExtResource( 2 )]
position = Vector2( 993, 298 )
scale = Vector2( 0.0709778, 0.0678815 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 530.657, 359.375 )
scale = Vector2( 0.145791, 0.145791 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 0, 0.905882, 1, 0.654902 )
position = Vector2( 100, 336 )
scale = Vector2( 1.72768, 1.81298 )
z_as_relative = false
amount = 50
process_material = SubResource( 1 )

[node name="Particles2D2" type="Particles2D" parent="."]
modulate = Color( 0.772549, 0.505882, 0, 0.878431 )
position = Vector2( 766, 483 )
scale = Vector2( 1.72768, 1.81298 )
z_as_relative = false
amount = 50
process_material = SubResource( 1 )

[node name="MainScreenMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -30.223
pitch_scale = 0.64
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -21.0
autoplay = true

[node name="river" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.0980392 )
position = Vector2( 435, 527 )
scale = Vector2( 1.35, 1 )
script = ExtResource( 6 )

[node name="screen" type="Sprite" parent="river"]

[node name="Viewport" type="Viewport" parent="river"]
size = Vector2( 500, 600 )
transparent_bg = true
render_target_v_flip = true

[node name="Spatial" parent="river/Viewport" instance=ExtResource( 5 )]

[node name="river2" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0980392 )
position = Vector2( 879, 656 )
script = ExtResource( 6 )

[node name="screen" type="Sprite" parent="river2"]

[node name="Viewport" type="Viewport" parent="river2"]
size = Vector2( 500, 600 )
transparent_bg = true
render_target_v_flip = true

[node name="Spatial" parent="river2/Viewport" instance=ExtResource( 5 )]

[node name="play" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( 527, 264 )
scale = Vector2( 0.234657, 0.236104 )
texture = ExtResource( 4 )

[node name="title" type="Sprite" parent="."]
position = Vector2( 522, 429 )
scale = Vector2( 0.187846, 0.187846 )
texture = ExtResource( 8 )

[node name="du2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 7.76897e-06, 0 )
stream = ExtResource( 10 )
volume_db = -10.0

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.643137 )
margin_left = 286.0
margin_top = 469.0
margin_right = 754.0
margin_bottom = 491.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="mouse_entered" from="MainMenu/CenterContainer/VBoxContainer/Setting" to="." method="_on_Setting_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/CenterContainer/VBoxContainer/Setting" to="." method="_on_Setting_mouse_exited"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Setting" to="." method="_on_Setting_pressed"]
[connection signal="mouse_entered" from="MainMenu/CenterContainer/VBoxContainer/How to Play" to="." method="_on_How_to_Play_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/CenterContainer/VBoxContainer/How to Play" to="." method="_on_How_to_Play_mouse_exited"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/How to Play" to="." method="_on_Setting_pressed"]
